tests/langs/snapshots/r#mod__langs__base.py_docstrings.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 1
  l: "\"\"\"\n"
  m: "      ^^"
- n: 2
  l: "Module for testing various Python grammar elements.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 21
  l: "    \"\"\"A free function for testing.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 29
  l: "    \"\"\"Decorator for free function.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 40
  l: "    \"\"\"Function with a decorator.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 46
  l: "    \"\"\"Class for testing various features.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 53
  l: "        \"\"\"Decorator for static methods.\"\"\"\n"
  m: "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 64
  l: "        \"\"\"Class method.\"\"\"\n"
  m: "              ^^^^^^^^^^^^^        "
- n: 70
  l: "        \"\"\"Instance method.\"\"\"\n"
  m: "              ^^^^^^^^^^^^^^^^        "
- n: 77
  l: "        \"\"\"Static method.\"\"\"\n"
  m: "              ^^^^^^^^^^^^^^        "
- n: 113
  l: "    \"\"\"Function for testing exceptions.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 132
  l: "    \"\"\"Function demonstrating nonlocal statement.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 144
  l: "    \"\"\"Function demonstrating inplace operators.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 155
  l: "    \"\"\"Function demonstrating various control flow statements.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 180
  l: "    \"\"\"Function demonstrating match statement.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
- n: 192
  l: "    \"\"\"Function demonstrating async syntax.\"\"\"\n"
  m: "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^        "
