tests/langs/snapshots/r#mod__langs__base.py_lambda.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 82
  l: "square = lambda x: x * x\n"
  m: "         ^^^^^^^^^^^^^^^  "
